# liblierre

./: .devcontainer.json  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  NOTICE  README.md  README_ja.md  ci.sh  format.py
.github/: renovate.json
.github/workflows/: ci.yaml  coverage.yaml
cmake/: LierreConfig.cmake.in  buildtime.cmake  emscripten.cmake  test.cmake
include/: lierre.h
include/lierre/: portable.h  reader.h  writer.h
src/: image.c  lierre.c  portable.c
src/decode/: decode_qr.c  decoder.c  decoder_detect.c  decoder_grid.c  reader.c
src/encode/: writer.c
src/internal/: decoder.h  image.h  memory.h  simd.h  structs.h
tests/: test_lierre.c  test_portable.c  test_qr_codec.c  test_reader.c  test_writer.c  utils.h
